--- a/site-web_test/style.css
+++ b/site-web_test/style.css
@@ -9,8 +9,8 @@ strong{
     border: 2px solid rgb(190, 189, 191);
 }
 img{
-    width: 480px;
-    height: 268px;
+    max-width: 100%;
+    height: auto;
 }
 body{
     font-family: "Century Gothic", Verdana, sans-serif;
@@ -37,3 +37,4 @@ div{
     left: 70px;
     bottom: 5px;
 }
+
