--- a/site-web_test/style.css
+++ b/site-web_test/style.css
@@ -1,7 +1,6 @@
 body{
     background-color: rgb(90, 90, 90);
-}
-body{
+    font-family: "Century Gothic", Verdana, sans-serif;
     color: rgb(224, 210, 210);
     font-weight: bold;
 }
@@ -12,9 +11,7 @@ img{
     max-width: 100%;
     height: auto;
 }
-body{
-    font-family: "Century Gothic", Verdana, sans-serif;
-}
+
 .p1{
     height: 16px;
     width: 360px;
@@ -37,4 +34,21 @@ div{
     left: 70px;
     bottom: 5px;
 }
-
+nav{
+    width: 100%;
+    background-color: rgb(195, 162, 226);
+}
+nav ul{
+    margin: 0px;
+    padding: 0px;
+}
+nav li{
+    list-style-type: none;
+    float: left;
+}
+nav a{
+    display: inline-block;
+    text-decoration: none;
+    padding: 20px 30px;
+    color: #f7ebeb;
+}
