--- a/ABC-DEV-site/styles.css
+++ b/ABC-DEV-site/styles.css
@@ -5,7 +5,7 @@ body{
 }
 nav{
     width: 100%;
-    background-color: #9c979a;
+    background-color: #71779b;
 }
 nav ul{
     margin: 0px;
@@ -23,9 +23,9 @@ nav a{
     color: #FFFF;
 }
 body{
-    background-color: rgb(128, 156, 172);
+    background-color: rgb(202, 202, 202);
     font-family: "Century Gothic", Verdana, sans-serif;
-    color: rgb(255, 255, 255);
+    color: rgb(53, 47, 47);
     font-weight: bold;
 }
 strong{
@@ -39,11 +39,11 @@ img{
     height: 16px;
     width: 360px;
     padding: 15px;
-    background-color: rgb(29, 75, 97);
+    background-color: rgb(49, 130, 168);
 }
 mark{
     color: white;
-    background-color: rgb(15, 150, 143);
+    background-color: rgb(63, 127, 170);
 }
 div{
     width: 400px;
