--- a/docs/styles.css
+++ b/docs/styles.css
@@ -5,7 +5,7 @@ body{
 }
 nav{
     width: 100%;
-    background-color: #71779b;
+    background-color: #638B55;
 }
 nav ul{
     margin: 0px;
@@ -47,7 +47,7 @@ nav a{
         flex-flow: column wrap;
         position: fixed;
         width: 100%;
-        background-color: #71779b
+        background-color: #638B55;
     }
     .menu.active {
         display: flex;
@@ -60,9 +60,9 @@ nav a{
 
 
 body{
-    background-color: rgb(151, 133, 133);
+    background-color:#C6DEC6;
     font-family: "Century Gothic", Verdana, sans-serif;
-    color: rgb(122, 118, 118);
+    color: #020402;
     font-weight: bold;
 }
 strong{
