--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,8 +1,4 @@
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0px;
-    padding: 0px;
-}
+
 nav{
     width: 100%;
     background-color: #638B55;
@@ -60,7 +56,7 @@ nav a{
 
 
 body{
-    background-color:#C6DEC6;
+    background-color:#d7d7d7;
     font-family: "Century Gothic", Verdana, sans-serif;
     color: #020402;
     font-weight: bold;
@@ -95,31 +91,31 @@ div{
     bottom: 5px;
 }
 .anglais-html:hover{
-    border-top: 5px solid #1fc89d;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .menu-html:hover{
-    border-top: 5px solid #6e55ea;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .github-html:hover{
-    border-top: 5px solid #9823dc;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .com-html:hover{
-    border-top: 5px solid #e12a2a;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .intro-html:hover{
-    border-top: 5px solid #04119a;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .video-html:hover{
-    border-top: 5px solid #e0e41e;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .fiche-html:hover{
-    border-top: 5px solid #15cf47;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
 }
 .tp-html{
@@ -128,10 +124,7 @@ div{
     margin: 0px auto;
 }
 .aut-html:hover{
-    border-top: 5px solid #cf7e1b;
+    border-top: 5px solid #A7E8BD;
     background-color: RGBa(228, 77, 38, 0.15);
-}
-.img2{
-    margin 150px;
 }
 
