--- a/docs/styles.css
+++ b/docs/styles.css
@@ -43,7 +43,7 @@ nav a{
         flex-flow: column wrap;
         position: fixed;
         width: 100%;
-        background-color: #666dac;
+        background-color: #0B6E4F;
     }
     .menu.active {
         display: flex;
