--- a/docs/styles.css
+++ b/docs/styles.css
@@ -131,4 +131,112 @@ div{
     background-color: RGBa(228, 77, 38, 0.15);
 }
 
+.diaporama{
+    margin: 0 auto;
+    width: 960px;
+    height: 500px;
+    border: 3px solid #333;
+    background-image: url("imgs/premier.jpg");
+
+    -webkit-animation-name: diapo1;
+    -webkit-animation-duration: 15s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-direction: normal;
+
+
+    -moz-animation-name: diapo1;
+    -moz-animation-duration: 15s;
+    -moz-animation-timing-function: linear;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-direction: normal;
+
+
+    animation-name: diapo1;
+    animation-duration: 15s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-direction: normal;
+}
+
+@-webkit-keyframes diapo1{
+    0%{background-image: url("imgs/premier.jpg");}
+    33%{background-image: url(imgs/second.jpg);}
+    66%{background-image: url(imgs/troisieme.jpg);}
+    88%{background-image: url(imgs/cinq.jpg);}
+    96%{background-image: url(imgs/quatre.jpg);}
+}
+
+@-mozkit-keyframes diapo1{
+    0%{background-image: url("imgs/premier.jpg");}
+    33%{background-image: url(imgs/second.jpg);}
+    66%{background-image: url(imgs/troisieme.jpg);}
+    88%{background-image: url(imgs/cinq.jpg);}
+    96%{background-image: url(imgs/quatre.jpg);}
+}
+
+@keyframes diapo1{
+    0%{background-image: url("imgs/premier.jpg");}
+    33%{background-image: url(imgs/second.jpg);}
+    66%{background-image: url(imgs/troisieme.jpg);}
+    88%{background-image: url(imgs/cinq.jpg);}
+    96%{background-image: url(imgs/quatre.jpg);}
+}
+
+#p1{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 300px;
+    right: 600px;
+}
+
+#p2{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 275px;
+    right: 600px;
+}
+
+#p3{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 230px;
+    right: 600px;
+}
+
+#p4{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 180px;
+    right: 600px;
+}
+
+#p5{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 160px;
+    right: 600px;
+}
+
+#p6{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 110px;
+    right: 600px;
+}
+
+#p7{
+    width: 500px;
+    text-align: center;
+    position: absolute;
+    bottom: 90px;
+    right: 600px;
+}
+
 
