--- a/docs/styles.css
+++ b/docs/styles.css
@@ -187,56 +187,17 @@ div{
     width: 500px;
     text-align: center;
     position: absolute;
-    bottom: 300px;
-    right: 600px;
+    top: 160px;
+    left: 1150px;
 }
 
 #p2{
     width: 500px;
     text-align: center;
     position: absolute;
-    bottom: 275px;
-    right: 600px;
+    top: 180px;
+    left: 1150px;
 }
 
-#p3{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 230px;
-    right: 600px;
-}
-
-#p4{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 180px;
-    right: 600px;
-}
-
-#p5{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 150px;
-    right: 600px;
-}
-
-#p6{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 100px;
-    right: 600px;
-}
-
-#p7{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 55px;
-    right: 600px;
-}
 
 
