--- a/docs/styles.css
+++ b/docs/styles.css
@@ -131,6 +131,11 @@ div{
     background-color: RGBa(228, 77, 38, 0.15);
 }
 
+.bdd-html:hover{
+    border-top: 5px solid #64176b;
+    background-color: RGBa(228, 77, 38, 0.15);
+}
+
 .diaporama{
     margin: 0 auto;
     width: 960px;
@@ -183,60 +188,12 @@ div{
     96%{background-image: url(imgs/quatre.jpg);}
 }
 
-#p1{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 300px;
-    right: 600px;
-}
-
-#p2{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 275px;
-    right: 600px;
-}
-
-#p3{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 230px;
-    right: 600px;
-}
-
-#p4{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 180px;
-    right: 600px;
-}
-
-#p5{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 150px;
-    right: 600px;
-}
-
-#p6{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 100px;
-    right: 600px;
-}
-
-#p7{
-    width: 500px;
-    text-align: center;
-    position: absolute;
-    bottom: 55px;
-    right: 600px;
+.textDiapo{
+    margin: auto;
+    left: auto;
+    right: auto;
+    top: auto;
+    bottom:auto;
 }
 
 
