--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,7 +1,7 @@
 
 nav{
     width: 100%;
-    background-color: #ca1d51;
+    background-color: #24bfca;
 }
 nav ul{
     margin: 0px;
@@ -26,16 +26,15 @@ nav a{
 }
 .textDiapo{
     position: absolute;
-    bottom: 25%;
-    right: 36%;
-    margin: auto;
+    bottom: 15%;
+    right: 3%;
 }
 #btnMenu {
     display: none;
 }
 
 #btnMenu:hover {
-    background: #9931c233;
+    background: #1fb5c9d3;
 }
 
 
@@ -48,7 +47,7 @@ nav a{
         flex-flow: column wrap;
         position: fixed;
         width: 100%;
-        background-color: #9550f0;
+        background-color: #149b9b;
     }
     .menu.active {
         display: flex;
@@ -63,6 +62,7 @@ body{
     font-family: "Century Gothic", Verdana, sans-serif;
     color: #020402;
     font-weight: bold;
+    text-align: center;
 }
 strong{
     border: 2px solid rgb(234, 231, 236);
@@ -145,14 +145,7 @@ div{
     border-top: 5px solid #64176b;
     background-color: RGBa(228, 77, 38, 0.15);
 }
-.img-center{
-    display: block;
-    margin: auto;
-    left: auto;
-    right: auto;
-    top: auto;
-    bottom:auto;
-}
+
 
 
 
